--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-validation": "^3.0.7",
     "redux": "^4.0.5",
     "redux-thunk": "^2.4.2",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
