--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "@paypal/react-paypal-js": "^8.0.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
