--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.4.2",
     "sweetalert2": "^11.7.12",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
