--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "@paypal/react-paypal-js": "^8.0.0",
+    "@react-oauth/google": "^0.11.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.17",
+    "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
